[package]
name = "easy-fs-fuse"
version = "0.1.0"
authors = ["Yifan Wu <shinbokuow@163.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = "2.33.3"
easy-fs = { path = "../easy-fs" }
zerocopy = "=0.7.35"
rand = "=0.8.4"
ppv-lite86 = "=0.2.17"

# [features]
# board_qemu = []
# board_k210 = []